# incidentfox

./: .cursorrules  .env.example  .gitignore  .gitleaks.toml  .syncconfig.yaml  .trivyignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_KNOWLEDGE.md  INSTALL.md  LICENSE  LICENSE-ENTERPRISE  LICENSING.md  Makefile  README.md  SECURITY.md  artifacthub-repo.yml  docker-compose.yml  internal_test_configs.txt  org_internal_test_config.json  proxy-config.yaml  ruff.toml  team_a_config.json  team_a_full_config.json  test_mcp_config.py
agent/: .dockerignore  .gitignore  DEPRECATED.md  Dockerfile  Makefile  README.md  config.example.yaml  debug_integration.py  debug_integration_v2.py  debug_integration_v3.py  pyproject.toml  pytest.ini
agent/.github/workflows/: ci.yml
agent/docs/: A2A_PROTOCOL.md  DEPLOYMENT.md  DYNAMIC_AGENT_SYSTEM.md  INTEGRATIONS.md  LOG_SAMPLING_DESIGN.md  MCP_CLIENT_IMPLEMENTATION.md  MULTI_AGENT_SYSTEM.md  OUTPUT_HANDLERS.md  SLACK_INVESTIGATION_FLOW.md  TEMPLATES.md  TOOLS_CATALOG.md  TOOLS_EXECUTION_CONTEXT_MIGRATION.md
agent/examples/: mcp_example.py  mcp_per_agent_config.md
agent/infra/terraform/: cloudwatch.tf  ecs.tf  iam.tf  main.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf
agent/scripts/: deploy.sh
agent/src/ai_agent/: __init__.py  __main__.py  api_server.py
agent/tests/: conftest.py  test_mcp_client.py.obsolete  test_mcp_per_agent_filtering.py.obsolete
agent/tests/integration/: test_snowflake_integration.py
agent/tests/unit/: test_agent_runner.py  test_config.py
ai_pipeline/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ai_pipeline/docs/: e2e-test-report-2026-02-18.md
ai_pipeline/scripts/: real_e2e_test.py
ai_pipeline/src/ai_learning_pipeline/: __init__.py  __main__.py  api_server.py  pipeline.py
ai_pipeline/src/ai_learning_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_pipeline/tests/: conftest.py  test_onboarding_e2e.py  test_realistic_github_scan.py
k8s_agent/: Dockerfile  pyproject.toml
k8s_agent/charts/incidentfox-k8s-agent/: Chart.yaml  values.yaml
k8s_agent/src/k8s_agent/: __init__.py  config.py  connection.py  executor.py  main.py
k8s_gateway/: Dockerfile  README.md  pyproject.toml
k8s_gateway/k8s/: ingress.yaml
k8s_gateway/src/k8s_gateway/: __init__.py  auth.py  config.py  connection_manager.py  main.py  models.py
local/: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_enterprise_load.py  test_self_learning_e2e.py  test_stress_e2e.py
local/claude_code_pack/: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh
local/claude_code_pack/.claude-plugin/: plugin.json
local/claude_code_pack/commands/: incident.md  metrics.md  remediate.md
local/claude_code_pack/hooks/: hooks.json
local/config/: init.sql
local/incidentfox_cli/: README.md  __init__.py  __main__.py  cli.py  client.py  multimodal.py
orchestrator/: .dockerignore  Dockerfile  README.md  deploy.sh  pyproject.toml
orchestrator/docs/: ARCHITECTURE.md  DEPLOYMENT.md  NORTH_STAR.md  PROVISIONING.md  SLACK_INTEGRATION.md  WEBHOOKS.md
orchestrator/k8s/: ingress-orchestrator-webhooks.yaml
orchestrator/src/incidentfox_orchestrator/: api_server.py  clients.py  config.py  context_enrichment.py  db.py  db_migrate.py  models.py  output_resolver.py  recall_summary.py  scheduler.py
orchestrator/tests/: conftest.py  e2e_apps.py  test_e2e_golden_path.py  test_e2e_provisioning_flow.py  test_provisioning.py  test_rbac_matrix.py
orchestrator/tests/unit/: test_google_chat_app.py  test_google_chat_provision.py  (+4 more)
slack-bot/: .dockerignore  .gitignore  Dockerfile  Makefile  OAUTH_SETUP.md  PUBLIC_DISTRIBUTION_CHECKLIST.md  README.md  app.py  app_registry.py  asset_manager.py  assets_config.py  config_client.py  env.example  file_handler.py  home_tab.py  installation_store.py  investigation_handler.py  markdown_utils.py  message_builder.py  modal_builder.py  modal_handler.py  model_catalog.py  onboarding.py  pyproject.toml  setup_handler.py  slack-manifest.json  slack-manifest.staging.json  slack-manifest.yaml  state.py  stream_handler.py  table_converter.py
slack-bot/assets/: kloudfuse.avif
slack-bot/k8s/: deployment.yaml  hpa.yaml  pvc.yaml  service-https.yaml  service.yaml  serviceaccount.yaml
slack-bot/scripts/: deploy-prod.sh
slack-bot/templates/: install.html  success.html
slack-bot/tests/: test_assets.py
sre-agent/: .gitignore  AGENTS.md  DEPLOYMENT_QUICK_START.md  DEPRECATED.md  Dockerfile  Dockerfile.simple  Makefile  PR1_COMPLETE.md  README.md  agent.py  agent_builder.py  auth.py  config.py  env.example  events.py  kubeconfig-demo.yaml  pyproject.toml  sandbox_manager.py  sandbox_server.py  server.py  server_simple.py  test_e2e_local.py  test_local.py  test_pr1_integration.py
sre-agent/credential-proxy/: .dockerignore  Dockerfile  INTEGRATION_CHEATSHEET.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml  test_models.py
sre-agent/docs/: KNOWN_ISSUES.md  README.md  SANDBOX_ARCHITECTURE.md  SDK_COMPARISON.md  UPSTREAM_CONTRIBUTION.md
sre-agent/k8s/: autoscaling.yaml  envoy-warmpool-configmap.yaml  install-gvisor-kind.sh  sandbox-cleanup-cronjob.yaml  sandbox-resource-quota.yaml  sandbox-template-warmpool-local.yaml  sandbox-template-warmpool.yaml  sandbox-template.yaml  sandbox-warmpool.yaml  sandbox_router.yaml  server-deployment.yaml  setup-kind.sh
sre-agent/providers/: __init__.py  base.py  claude_provider.py  openhands_provider.py
sre-agent/sandbox-router/: LICENSE  sandbox_router.py
sre-agent/scripts/: README.md  deploy-prod.sh  dev.sh  setup-github-secrets.sh  setup-local.sh  setup-prod.sh
sre-agent/tests/: test-local-e2e.sh  test-production.sh  test_agent_builder.py  test_agent_integration.py  test_config_enhanced.py  test_observability.py
unified-agent/: Dockerfile  README.md  pyproject.toml
unified-agent/examples/: simple_agent.py
unified-agent/tests/: __init__.py  test_config_driven_agents.py  test_core.py
(+2549 files in other folders)
