[tool.poetry]
name = "ai-agent-system"
version = "1.0.0"
description = "Production-ready multi-agent AI system for infrastructure automation"
authors = ["Your Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Core
openai = "^1.75.0"
openai-agents = "^0.2.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"

# Async & HTTP
aiohttp = "^3.13.3"
httpx = "^0.28.0"

# Security patches for transitive dependencies (others patched in Dockerfile)
urllib3 = "^2.6.3"
pyasn1 = "^0.6.2"
sanic = "^24.6.0"

# AWS
boto3 = "^1.35.0"
aioboto3 = "^13.3.0"

# Azure
azure-identity = {version = "^1.19.0", optional = true}
azure-mgmt-compute = {version = "^33.0.0", optional = true}
azure-mgmt-containerservice = {version = "^33.0.0", optional = true}
azure-mgmt-web = {version = "^7.3.0", optional = true}
azure-mgmt-sql = {version = "^3.0.0", optional = true}
azure-mgmt-cosmosdb = {version = "^9.7.0", optional = true}
azure-mgmt-costmanagement = {version = "^4.0.0", optional = true}
azure-mgmt-advisor = {version = "^9.0.0", optional = true}
azure-mgmt-recoveryservices = {version = "^3.1.0", optional = true}
azure-mgmt-recoveryservicesbackup = {version = "^9.2.0", optional = true}
azure-mgmt-network = {version = "^27.0.0", optional = true}
azure-mgmt-monitor = {version = "^7.0.0", optional = true}
azure-mgmt-resourcegraph = {version = "^8.0.0", optional = true}
azure-monitor-query = {version = "^1.4.0", optional = true}

# Kubernetes
kubernetes = "^31.0.0"

# Logging & Observability
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-exporter-otlp = "^1.28.0"

# Utilities
tenacity = "^9.1.2"
pyyaml = "^6.0.2"
click = "^8.1.0"

# Optional integrations
slack-sdk = {version = "^3.33.0", optional = true}
requests = {version = "^2.32.0", optional = true}
PyGithub = {version = "^2.5.0", optional = true}
elasticsearch = {version = "^8.17.0", optional = true}
atlassian-python-api = {version = "^3.41.0", optional = true}
datadog-api-client = {version = "^2.31.0", optional = true}
google-api-python-client = {version = "^2.154.0", optional = true}
google-auth = {version = "^2.37.0", optional = true}

# Tracing backends (Langfuse for LLM-specific observability)
langfuse = {version = "^2.0.0", optional = true}

# Anomaly detection / Time series (Prophet)
prophet = {version = "^1.1.5", optional = true}
pandas = {version = "^2.2.0", optional = true}

# Data warehouses
snowflake-connector-python = {version = "^3.12.0", optional = true}
psycopg2-binary = {version = "^2.9.0", optional = true}
google-cloud-bigquery = {version = "^3.25.0", optional = true}

# Issue tracking & project management
jira = {version = "^3.8.0", optional = true}
python-gitlab = {version = "^4.4.0", optional = true}
notion-client = {version = "^2.2.0", optional = true}

# Observability / Log platforms
splunk-sdk = {version = "^2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12"
ipython = "^8.29.0"

[tool.poetry.extras]
slack = ["slack-sdk"]
github = ["PyGithub"]
elasticsearch = ["elasticsearch"]
confluence = ["atlassian-python-api"]
datadog = ["datadog-api-client"]
google = ["google-api-python-client", "google-auth"]
langfuse = ["langfuse"]
prophet = ["prophet", "pandas"]
snowflake = ["snowflake-connector-python"]
postgresql = ["psycopg2-binary"]
bigquery = ["google-cloud-bigquery"]
jira = ["jira"]
gitlab = ["python-gitlab"]
notion = ["notion-client"]
splunk = ["splunk-sdk"]
azure = [
    "azure-identity",
    "azure-mgmt-compute",
    "azure-mgmt-containerservice",
    "azure-mgmt-web",
    "azure-mgmt-sql",
    "azure-mgmt-cosmosdb",
    "azure-mgmt-costmanagement",
    "azure-mgmt-advisor",
    "azure-mgmt-recoveryservices",
    "azure-mgmt-recoveryservicesbackup",
    "azure-mgmt-network",
    "azure-mgmt-monitor",
    "azure-mgmt-resourcegraph",
    "azure-monitor-query"
]
all = [
    "slack-sdk",
    "requests",
    "PyGithub",
    "elasticsearch",
    "atlassian-python-api",
    "datadog-api-client",
    "google-api-python-client",
    "google-auth",
    "langfuse",
    "prophet",
    "pandas",
    "snowflake-connector-python",
    "psycopg2-binary",
    "google-cloud-bigquery",
    "jira",
    "python-gitlab",
    "notion-client",
    "splunk-sdk",
    "azure-identity",
    "azure-mgmt-compute",
    "azure-mgmt-containerservice",
    "azure-mgmt-web",
    "azure-mgmt-sql",
    "azure-mgmt-cosmosdb",
    "azure-mgmt-costmanagement",
    "azure-mgmt-advisor",
    "azure-mgmt-recoveryservices",
    "azure-mgmt-recoveryservicesbackup",
    "azure-mgmt-network",
    "azure-mgmt-monitor",
    "azure-mgmt-resourcegraph",
    "azure-monitor-query"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
addopts = "-v --tb=short --strict-markers"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

