[project]
name = "incidentfox-cli"
version = "0.1.0"
description = "IncidentFox AI SRE - Local CLI for AI-powered incident investigations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "IncidentFox Team"}
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
voice = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "openai>=1.0.0",
    "numpy>=1.24.0",
]
all = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "openai>=1.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
incidentfox = "incidentfox_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incidentfox_cli"]
