[build-system]
requires = ["setuptools>=68", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "incidentfox-orchestrator"
version = "0.1.0"
description = "IncidentFox orchestrator: team onboarding + provisioning control plane"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.10.0",
  "httpx>=0.27.0",
  # Security patches (urllib3, pyasn1, jaraco.context, starlette) applied in Dockerfile
  "prometheus-client>=0.20.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "kubernetes>=29.0.0",  # For K8s CronJob and Deployment management
  "slack-bolt>=1.18.0",  # Slack Bolt SDK for webhook handling
  "slack-sdk>=3.27.0",   # Slack SDK for API calls
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]


