[project]
name = "incidentfox-slack-bot"
version = "0.1.0"
description = "Slack bot for IncidentFox AI SRE agent"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.26.0",  # For streaming support
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",  # For calling sre-agent
    "mistune>=3.0.0",  # Markdown parser for Slack mrkdwn conversion
    "flask>=3.0.0",  # For HTTP mode (production)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

