[project]
name = "incidentfox-mcp"
version = "1.0.0"
description = "IncidentFox MCP Server for Claude Code - SRE investigation tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "kubernetes>=28.1.0",
    "boto3>=1.34.0",
    "datadog-api-client>=2.20.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.scripts]
incidentfox-mcp = "incidentfox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incidentfox_mcp"]
